# DEVELOP

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  corrigir_lambda_except.py  fix_ci.py  fix_final.py  fix_noqa.py  fix_por_linha.py  pyproject.toml  render.yaml  resolver_tudo.py  setup_cicd.py  setup_cicd_quick.py  update_version.sh
.claude/: settings.json
.github/workflows/: build-release.yml  ci.yml
HotelSantos/: release_manager.py
HotelSantos/.github/workflows/: build-release.yml
HotelSantos/app/: requirements.txt
app/: __init__.py  app_gui.py  logger_system.py  requirements.txt  setup.iss  sistema_clientes.py  update_manager.py
app/core/: __init__.py  database.py  models.py
app/screens/: __init__.py  base.py  compras.py  config.py  dashboard.py  financeiro.py  hospedes.py  notificacoes.py  relatorios.py
tests/: test_models.py  verificar_sistema.py
web/: db_pg.py  exporters.py  main.py  railway.toml  requirements.txt
web/static/: manifest.json
web/static/css/: style.css
web/static/docs/: manual_usuario.md
web/templates/: agenda.html  agenda_painel.html  ajuda.html  ajustes.html  base.html  compras.html  compras_detalhe.html  dashboard.html  erro.html  financeiro.html  home.html  hospede_detalhe.html  hospedes.html  login.html  relatorios.html  simulador.html
